<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/LogoWhereFood"
        android:layout_width="270dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="450dp"
        android:contentDescription="@string/logoWhereFood"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="429dp"
        android:fontFamily="monospace"
        android:text="@string/BeHealthytext"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/Layoutbutton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Main_login_button"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_blue"
            android:fontFamily="monospace"
            android:text="@string/Main_login_button"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layoutbutton2"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="234dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Main_register_button"
            android:layout_width="172dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_yellow"
            android:fontFamily="monospace"
            android:text="@string/Main_register_button"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/Goback"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="716dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/Goback" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="277dp"
        android:layout_height="453dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-100dp"
        app:srcCompat="@drawable/rainbow"
        android:contentDescription="@string/rainbow"/>

</RelativeLayout>

