<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/WhereFood_login"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:contentDescription="@string/WherefoodLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/Register"
            android:layout_width="361dp"
            android:layout_height="128dp"
            android:contentDescription="@string/logoRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092"
            app:srcCompat="@drawable/register" />


        <ImageView
            android:id="@+id/selectphoto"
            android:layout_width="62dp"
            android:layout_height="41dp"
            android:background="@drawable/folder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54"
            app:srcCompat="@drawable/folder" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="186dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543"
            app:srcCompat="@drawable/camera" />

        <EditText
            android:id="@+id/username_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/UserType"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <EditText
            android:id="@+id/email_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email_edittext_login"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register" />

        <EditText
            android:id="@+id/password_edittext_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_edittext_login"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/selectphoto_imageview_register"
            android:background="@drawable/uploadversion1"
            app:civ_border_width="4dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342"
            app:srcCompat="@drawable/user" />

        <Button
            android:id="@+id/register_button_register"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_yellow"
            android:fontFamily="monospace"
            android:text="@string/Main_register_button"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

        <TextView
            android:id="@+id/Gb"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/Goback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.977" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>